Reading from xls and saving genes in db
